@@ -1,5 +1,7 @@
 import java.util.List;
+import java.util.Arrays;
 import java.util.ArrayList;
+import java.util.Comparator;
 
 public class Task3 {
 
@@ -11,42 +13,51 @@ public class Task3 {
         if (studentList.isEmpty()) {
             return null;
         }
-        Task2 topStudent = studentList.get(0);
-        for (Task2 student : studentList) {
-            if (student.calculateAverageGrade() > topStudent.calculateAverageGrade()) {
-                topStudent = student;
-            }
-        }
-        return topStudent;
+        return studentList.stream()
+                .max(Comparator.comparingDouble(Task2::calculateAverageGrade))
+                .orElse(null);
     }
 
     public static double calculateAverageGradeOfAllStudents(List<Task2> studentList) {
         if (studentList.isEmpty()) {
             return 0.0;
         }
-        double totalSum = 0;
-        for (Task2 student : studentList) {
-            totalSum += student.calculateAverageGrade();
-        }
+        double totalSum = studentList.stream()
+                .mapToDouble(Task2::calculateAverageGrade)
+                .sum();
         return totalSum / studentList.size();
     }
 
+    public static void printStudentsSortedByLastName(List<Task2> studentList) {
+        studentList.stream()
+                .sorted(Comparator.comparing(Task2::getLastName))
+                .forEach(student -> System.out.println(student));
+    }
+
     public static void main(String[] args) {
-        List<Task2> students = new ArrayList<>();
-        students.add(new Task2("57191", "Rumeysa", "Ceyhan", List.of(67, 90, 45)));
-        students.add(new Task2("56789", "Enes", "Yıldırım", List.of(75, 80, 88, 92)));
-        students.add(new Task2("76543", "Busra", "Erken", List.of(90, 95, 85)));
-        students.add(new Task2("56723", "Cıhan", "Bulut", List.of(70, 75, 80)));
+        List<Task2> students = Arrays.asList(
+                new Task2("57191", "Rumeysa", "Ceyhan", Arrays.asList(90, 50, 30, 40)),
+                new Task2("57812", "Cıhan", "Ceran", Arrays.asList(70, 30, 20, 40)),
+                new Task2("56789", "Ayse", "Erken", Arrays.asList(20, 80, 30, 60)),
+                new Task2("57435", "Enes", "Bulut", Arrays.asList(50, 90, 80, 90))
+        );
 
         List<Task2> loadedStudents = loadStudentData(students);
-        Task2 topStudent = findStudentWithHighestAverage(loadedStudents);
-        double averageGradeAllStudents = calculateAverageGradeOfAllStudents(loadedStudents);
 
+        // Find the student with the highest average grade
+        Task2 topStudent = findStudentWithHighestAverage(loadedStudents);
         if (topStudent != null) {
-            System.out.println("Top Student: " + topStudent.getFirstName() + " " + topStudent.getLastName() + " with average grade: " + topStudent.calculateAverageGrade());
+            System.out.println("Student with the highest average: " + topStudent);
         } else {
             System.out.println("No students found.");
         }
+
+        // Calculate the average grade of all students
+        double averageGradeAllStudents = calculateAverageGradeOfAllStudents(loadedStudents);
         System.out.println("Average Grade of All Students: " + averageGradeAllStudents);
+
+        // Print students sorted by last names
+        System.out.println("Students sorted by last names:");
+        printStudentsSortedByLastName(loadedStudents);
     }
 }
